--- a/operator/cmd/mesh/testdata/manifest-generate/output/all_on.golden-show-in-gh-pull-request.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/output/all_on.golden-show-in-gh-pull-request.yaml
@@ -8861,8 +8861,8 @@ spec:
         image: gcr.io/istio-testing/proxyv2:latest
         name: istio-proxy
         ports:
-        - containerPort: 80
-        - containerPort: 443
+        - containerPort: 8080
+        - containerPort: 8443
         - containerPort: 15443
         - containerPort: 15090
           name: http-envoy-prom
@@ -9093,6 +9093,7 @@ spec:
         - containerPort: 15021
         - containerPort: 8080
         - containerPort: 8443
+        - containerPort: 15012
         - containerPort: 15443
         - containerPort: 15090
           name: http-envoy-prom
@@ -9697,8 +9698,10 @@ spec:
   ports:
   - name: http2
     port: 80
+    targetPort: 8080
   - name: https
     port: 443
+    targetPort: 8443
   - name: tls
     port: 15443
     targetPort: 15443
@@ -9728,6 +9731,9 @@ spec:
   - name: https
     port: 443
     targetPort: 8443
+  - name: tcp-istiod
+    port: 15012
+    targetPort: 15012
   - name: tls
     port: 15443
     targetPort: 15443
