--- a/operator/cmd/mesh/testdata/manifest-generate/output/helm_values_enablement.golden.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/output/helm_values_enablement.golden.yaml
@@ -132,8 +132,8 @@ spec:
         image: gcr.io/istio-testing/proxyv2:latest
         name: istio-proxy
         ports:
-        - containerPort: 80
-        - containerPort: 443
+        - containerPort: 8080
+        - containerPort: 8443
         - containerPort: 15443
         - containerPort: 15090
           name: http-envoy-prom
@@ -250,7 +250,7 @@ spec:
     spec:
       serviceAccountName: kiali-service-account
       containers:
-      - image: "quay.io/kiali/kiali:v1.18"
+      - image: "quay.io/kiali/kiali:v1.22"
         name: kiali
         command:
         - "/opt/kiali/kiali"
@@ -349,8 +349,10 @@ spec:
   ports:
   - name: http2
     port: 80
+    targetPort: 8080
   - name: https
     port: 443
+    targetPort: 8443
   - name: tls
     port: 15443
     targetPort: 15443
