fix serviceaccount mismatch issue for operator.

--- a/manifests/charts/istio-operator/templates/clusterrole_binding.yaml
+++ b/manifests/charts/istio-operator/templates/clusterrole_binding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: istio-operator
 subjects:
 - kind: ServiceAccount
-  name: istio-operator
+  name: istio-operator{{- if not (eq .Values.revision "") }}-{{ .Values.revision }}{{- end }}
   namespace: {{.Values.operatorNamespace}}
 roleRef:
   kind: ClusterRole
