--- a/releasenotes/notes/update-grafana-memory-compute.yaml
+++ b/releasenotes/notes/update-grafana-memory-compute.yaml
@@ -2,7 +2,8 @@ apiVersion: release-notes/v2
 kind: feature
 area: telemetry
 
-releaseNotes: |
+releaseNotes:
+- |
   The "Control Plane Dashboard" and the "Performance Dashboard" now use `container_memory_working_set_bytes` metric
   to display memory. This metric only counts memory that *cannot be reclaimed* by the kernel even under memory pressure,
   and therefore more relevant for tracking. It is also consistent with `kubectl top`. The reported values are lower than
