Analyze duplicate VirtualService matches

--- a/galley/pkg/config/analysis/msg/messages.yaml
+++ b/galley/pkg/config/analysis/msg/messages.yaml
@@ -329,3 +329,27 @@ messages:
         type: string
       - name: port
         type: string
+
+  - name: "VirtualServiceUnreachableRule"
+    code: IST0130
+    level: Warning
+    description: "A VirtualService rule will never be used because a previous rule uses the same match."
+    template: "VirtualService rule %d not used (%s)."
+    args:
+      - name: ruleno
+        type: int
+      - name: reason
+        type: "string"
+
+  - name: "VirtualServiceIneffectiveMatch"
+    code: IST0131
+    level: Info
+    description: "A VirtualService rule match duplicates a match in a previous rule."
+    template: "VirtualService rule %d match %d is not used (duplicates a match in rule %d)."
+    args:
+      - name: ruleno
+        type: int
+      - name: matchno
+        type: int
+      - name: dupno
+        type: int
