--- a/releasenotes/notes/update-grafana-memory-compute.yaml
+++ b/releasenotes/notes/update-grafana-memory-compute.yaml
@@ -4,7 +4,7 @@ area: telemetry
 
 releaseNotes:
 - |
-  The "Control Plane Dashboard" and the "Performance Dashboard" now use `container_memory_working_set_bytes` metric
+  **Updated** the "Control Plane Dashboard" and the "Performance Dashboard" to use the `container_memory_working_set_bytes` metric
   to display memory. This metric only counts memory that *cannot be reclaimed* by the kernel even under memory pressure,
   and therefore more relevant for tracking. It is also consistent with `kubectl top`. The reported values are lower than
   the previous values.
