--- a/releasenotes/notes/25794.yaml
+++ b/releasenotes/notes/25794.yaml
@@ -1,9 +1,11 @@
 apiVersion: release-notes/v2
 kind: feature
 area: telemetry
-issue: 22408
+issue:
+- "22408"
 
-releaseNotes: |
-  *Added*
-  - Update Istio Workload and Istio Service dashboards to improve loading time
-  - Parameterise grafana dashboard 's with datasource
+releaseNotes:
+- |
+  **Added** Update Istio Workload and Istio Service dashboards to improve loading time.
+- |
+  **Added** parameterise Grafana dashboards with datasource
