--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -31,4 +31,5 @@ RUN apt-get update && \
   && rm -rf  /var/log/*log /var/lib/apt/lists/* /var/log/apt/* /var/lib/dpkg/*-old /var/cache/debconf/*-old
 
 # Sudoers used to allow tcpdump and other debug utilities.
-RUN echo "istio-proxy ALL=NOPASSWD: ALL" >> /etc/sudoers
+RUN useradd -m --uid 1337 istio-proxy && \
+  echo "istio-proxy ALL=NOPASSWD: ALL" >> /etc/sudoers
