--- a/galley/pkg/config/analysis/msg/messages.yaml
+++ b/galley/pkg/config/analysis/msg/messages.yaml
@@ -334,10 +334,10 @@ messages:
     code: IST0130
     level: Warning
     description: "A VirtualService rule will never be used because a previous rule uses the same match."
-    template: "VirtualService rule %d not used (%s)."
+    template: "VirtualService rule %v not used (%s)."
     args:
       - name: ruleno
-        type: int
+        type: string
       - name: reason
         type: "string"
 
@@ -345,11 +345,11 @@ messages:
     code: IST0131
     level: Info
     description: "A VirtualService rule match duplicates a match in a previous rule."
-    template: "VirtualService rule %d match %d is not used (duplicates a match in rule %d)."
+    template: "VirtualService rule %v match %v is not used (duplicates a match in rule %v)."
     args:
       - name: ruleno
-        type: int
+        type: string
       - name: matchno
-        type: int
+        type: string
       - name: dupno
-        type: int
+        type: string
