manifest: remove extraneous pilot name
When looking at the resources deployed to our cluster, I noticed that
istiod's cluster role binding still contains pilot in the name despite
the bound role no longer including pilot. Removing & updating the app
label.

--- a/manifests/charts/base/files/gen-istio-cluster.yaml
+++ b/manifests/charts/base/files/gen-istio-cluster.yaml
@@ -3553,7 +3553,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: istiod-pilot-istio-system
+  name: istiod-istio-system
   labels:
     app: pilot
     release: istio
