make secret rotation
Change-Id: Id1dd67a49a0d2163ff301dc4d8a920428493df6d

--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -65,7 +65,7 @@ features:
     user:
     ingress:
       mtls:
-        server-keyrotation:
+        secretrotation:
         generic-compoundrotation:
         nongeneric-compoundrotation:
         gateway:
