--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -87,6 +87,7 @@ features:
       central-istiod:
       multimaster:
       remote:
+      centralremotekubeconfig:
   # describes internal build and testing infrastrcuture
   infrastructure:
     # the testing framework
