test empty revision

--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -83,6 +83,7 @@ features:
       uninstall_revision:
       uninstall_manifest:
       uninstall_purge:
+      install-revision:
     multicluster:
       central-istiod:
       multimaster:
