[release 1.7] fix istioctl authz check to print authz policies applied in pod (#26676)
* [release 1.7] fix istioctl authz check to print authz policies applied in pod (#26625)

* fix istioctl authz check for gateway

--- a/tests/integration/istioctl/testdata/authz-b.yaml
+++ b/tests/integration/istioctl/testdata/authz-b.yaml
@@ -4,10 +4,13 @@ metadata:
   name: allow-policy
 spec:
   action: ALLOW
+  selector:
+    matchLabels:
+      "istio": "ingressgateway"
   rules:
   - to:
     - operation:
-        methods: ["*"]
+        notPorts: ["100"]
 ---
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
@@ -15,11 +18,14 @@ metadata:
   name: deny-policy
 spec:
   action: DENY
+  selector:
+    matchLabels:
+      "istio": "ingressgateway"
   rules:
   - to:
     - operation:
-        methods: ["*"]
+        ports: ["100"]
   - to:
     - operation:
-        methods: ["*"]
+        ports: ["100"]
 ---
