--- a/releasenotes/notes/network-label.yaml
+++ b/releasenotes/notes/network-label.yaml
@@ -3,5 +3,6 @@ kind: feature
 area: installation
 issue:
 - 25500
-releaseNotes: |
-  *Added* The network for a Pod can be specified via the label "topology.istio.io/network". This overrides the setting for the cluster's installation values (values.globalnetwork). If the label isn't set, it is injected based on the global value for the cluster.
+releaseNotes:
+- |
+  **Added** The network for a Pod can be specified via the label "topology.istio.io/network". This overrides the setting for the cluster's installation values (values.globalnetwork). If the label isn't set, it is injected based on the global value for the cluster.
