--- a/releasenotes/notes/26997.yaml
+++ b/releasenotes/notes/26997.yaml
@@ -1,46 +1,10 @@
 apiVersion: release-notes/v2
-
-# This YAML file describes the format for specifying a release notes entry for Istio.
-# This should be filled in for all user facing changes.
-
-# kind describes the type of change that this represents.
-# Valid Values are:
-# - bug-fix -- Used to specify that this change represents a bug fix.
-# - security-fix -- Used to specify that this change represents a security fix.
-# - feature -- Used to specify a new feature that has been added.
-# - test -- Used to describe additional testing added. This file is optional for
-#   tests, but included for completeness.
 kind: feature
-
-# area describes the area that this change affects.
-# Valid values are:
-# - traffic-management
-# - security
-# - telemetry
-# - installation
-# - istioctl
-# - documentation
-area: traffic-management
-
-# issue is a list of GitHub issues resolved in this note.
+area: istioctl
 issue:
+  - 24905
 
-# releaseNotes is a markdown listing of any user facing changes. This will appear in the
-# release notes.
 releaseNotes:
-  |
-  ***Added*** Add application configuration-based healthchecking
-
-# upgradeNotes is a markdown listing of any changes that will affect the upgrade
-# process. This will appear in the release notes.
-upgradeNotes:
-  title:
-  content:
-
-# docs is a list of related docs to the change.
-docs: https://docs.google.com/document/d/1G4s_PrmvkwCKoH_kXVeSUAszsaj3ZfpIlraSdeTSPKU/edit#
-
-
-# securityNotes is a markdown listing of any changes related to the security of
-# Istio.
-securityNotes:
+  - |
+    **Added** `istioctl experimental version` and `proxy-status` now use token security.
+    A new option, `--plaintext`, has been created for testing without tokens.
