--- a/releasenotes/notes/24905.yaml
+++ b/releasenotes/notes/24905.yaml
@@ -1,10 +1,9 @@
 apiVersion: release-notes/v2
 kind: feature
-area: istioctl
+area: traffic-management
 issue:
-  - 24905
+  - 26997
 
 releaseNotes:
 - |
-  **Added** `istioctl experimental version` and `proxy-status` now use token security.
-  A new option, `--plaintext`, has been created for testing without tokens.
+  **Added** application config-based vm healthchecking
