Enable Istio Agent DNS interception for demo and preview

--- a/manifests/profiles/demo.yaml
+++ b/manifests/profiles/demo.yaml
@@ -3,6 +3,11 @@ kind: IstioOperator
 spec:
   meshConfig:
     accessLogFile: /dev/stdout
+    defaultConfig:
+      proxyMetadata:
+        # Enable Istio agent to handle DNS requests for known hosts
+        # Unknown hosts will automatically be resolved using upstream dns servers in resolv.conf
+        ISTIO_META_DNS_CAPTURE: "ALL"
   components:
     egressGateways:
     - name: istio-egressgateway
