--- a/manifests/profiles/preview.yaml
+++ b/manifests/profiles/preview.yaml
@@ -4,6 +4,13 @@
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
+  meshConfig:
+    accessLogFile: /dev/stdout
+    defaultConfig:
+      proxyMetadata:
+        # Enable Istio agent to handle DNS requests for known hosts
+        # Unknown hosts will automatically be resolved using upstream dns servers in resolv.conf
+        ISTIO_META_DNS_CAPTURE: "ALL"
   values:
     telemetry:
       v2:
