--- a/releasenotes/notes/agent-dns-capture.yaml
+++ b/releasenotes/notes/agent-dns-capture.yaml
@@ -1,7 +1,11 @@
 apiVersion: release-notes/v2
 kind: feature
 area: networking
-releaseNotes: |
-  *Added* Experimental DNS resolution in the Istio agent to better support service entries with TCP services without VIPs, multicluster DNS resolution,
-  and DNS resolution of Kubernetes services from VM sidecars. This feature is disabled by default and can be enabled by setting the following
-  in the Istio Operator: meshConfig.defaultConfig.proxyMetadata.ISTIO_META_DNS_CAPTURE="ALL".
+issue:
+- 26826
+releaseNotes:
+- |
+  *Added* Experimental DNS resolution in the Istio agent to better support use cases like service entries
+  with TCP services without VIPs, multicluster DNS resolution, and DNS resolution of Kubernetes services
+  from VM sidecars. This feature is disabled by default and can be enabled by setting the following in the
+  Istio Operator: `meshConfig.defaultConfig.proxyMetadata.ISTIO_META_DNS_CAPTURE="ALL"`.
