Kiali: Add rbac.istio.io apiGroup to clusterRoles
Newer versions of Kiali that are compatible with Istio 1.7 require some
additional permissions on the utilized clusterRoles.

In this commit, we include the missing apiGroup to corresponding Kiali
manifests.

Signed-off-by: dntosas <ntosas@gmail.com>

--- a/manifests/charts/istio-telemetry/kiali/templates/clusterrole.yaml
+++ b/manifests/charts/istio-telemetry/kiali/templates/clusterrole.yaml
@@ -44,10 +44,11 @@ rules:
       - get
       - list
       - watch
-  - apiGroups: 
+  - apiGroups:
     - config.istio.io
     - networking.istio.io
     - authentication.istio.io
+    - rbac.istio.io
     - security.istio.io
     resources: ["*"]
     verbs:
@@ -110,10 +111,11 @@ rules:
       - get
       - list
       - watch
-  - apiGroups: 
+  - apiGroups:
     - config.istio.io
     - networking.istio.io
     - authentication.istio.io
+    - rbac.istio.io
     - security.istio.io
     resources: ["*"]
     verbs:
