Kiali: Switch to anonymous auth strategy
In newer versions of Kiali that are compatible with Istio 1.7, auth
login strategy has been removed thus not supported.

In this commit, we are migrating to anonymous auth strategy which is
also Kiali's default one.

Signed-off-by: dntosas <ntosas@gmail.com>

--- a/manifests/charts/istio-telemetry/kiali/values.yaml
+++ b/manifests/charts/istio-telemetry/kiali/values.yaml
@@ -39,7 +39,7 @@ kiali:
 
   dashboard:
     auth:
-      strategy: login # Can be anonymous, login, openshift, or ldap
+      strategy: anonymous # Can be anonymous, openid, openshift, or ldap
       # ldap: # This is required to use the ldap strategy
       #   ldap_base: "DC=example,DC=com"
       #   ldap_bind_dn: "CN={USERID},OU=xyz,OU=Users,OU=Accounts,DC=example,DC=com"
