--- a/manifests/charts/istio-telemetry/kiali/values.yaml
+++ b/manifests/charts/istio-telemetry/kiali/values.yaml
@@ -5,7 +5,7 @@ kiali:
   enabled: false # Note that if using the demo or demo-auth yaml when installing via Helm, this default will be `true`.
   replicaCount: 1
   hub: quay.io/kiali
-  tag: v1.22
+  tag: v1.23
   image: kiali
   contextPath: /kiali # The root context path to access the Kiali UI.
   nodeSelector: {}
@@ -39,7 +39,7 @@ kiali:
 
   dashboard:
     auth:
-      strategy: login # Can be anonymous, login, openshift, or ldap
+      strategy: anonymous # Can be anonymous, openid, openshift, or ldap
       # ldap: # This is required to use the ldap strategy
       #   ldap_base: "DC=example,DC=com"
       #   ldap_bind_dn: "CN={USERID},OU=xyz,OU=Users,OU=Accounts,DC=example,DC=com"
